# slowlog

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: main.yml  pull-request.yml  tag.yml
examples/: aggregate.rs  reader.rs
src/: helpers.rs  lib.rs  sql.rs
