[package]
name = "slowlog"
version = "0.1.2"
edition = "2021"
description = "A parser for MySQL slow query logs that anonymises queries by replacing literals with placeholders."
authors = ["Don Schonknecht <don@tpyo.net>"]
repository = "https://github.com/tpyo/slowlog"
readme = "README.md"
license = "MIT"
categories = ["parser-implementations", "database"]
keywords = [
    "mysql",
    "slowlog",
    "parser",
    "anonymise",
    "query",
]
exclude = [
    ".vscode",
    ".github",
]

[features]
default = ["readers"]
readers = []

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["alloc"] }
hex-literal = "1.1.0"
sha1 = { version = "0.11.0", default-features = false }
sqlparser = { version = "0.61.0", default-features = false }

[dev-dependencies]
tempfile = "3.27.0"

[[example]]
name = "reader"
path = "examples/reader.rs"
required-features = ["readers"]

[[example]]
name = "aggregate"
path = "examples/aggregate.rs"
required-features = ["readers"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
